# Vanguard-DAPS

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  baseline_scores.json  daps.db  daps_implementation.jsx  daps_plan.jsx  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
core/: config.py  detector.py  embedder.py  indexer.py
db/: database.py
scripts/: build_test_dataset.py  setup_ml_environment.py
server/: app.py  environment.py
server/core/: __init__.py  config.py  detector.py  embedder.py  indexer.py
server/db/: __init__.py  database.py  models.py
server/scripts/: __init__.py  build_test_dataset.py  evaluate_performance.py  setup_ml_environment.py
server/static/: index.html
static/: benchmarks.json  index.html
tasks/: __init__.py
tasks/easy_cropped/: __init__.py
tasks/easy_exact_copy/: __init__.py
tasks/easy_recompressed/: __init__.py
tasks/hard_adversarial_decoy/: __init__.py  grader.py
tasks/hard_ai_generated/: __init__.py  grader.py
tasks/hard_ambiguous/: __init__.py
tasks/medium_filtered/: __init__.py
tasks/medium_metadata_mismatch/: __init__.py
tasks/medium_watermarked/: __init__.py
