[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-daps-env"
version = "2.0.0"
description = "Vanguard Digital Asset Protection System (DAPS) for Meta x PyTorch OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-multipart",
    "openai",
    "requests",
    "torch",
    "torchvision",
    "faiss-cpu",
    "imagehash",
    "Pillow",
    "sqlalchemy",
    "numpy",
    "scipy",
]

[project.scripts]
server = "server.app:main"
openenv-server = "openenv.core.cli:server"

[project.entry-points."openenv.environments"]
daps-env = "server.app:app"

[tool.setuptools]
[tool.setuptools]
packages = ["daps_env", "server", "server.db", "server.core", "server.scripts", "tasks", "tasks.easy_exact_copy", "tasks.easy_recompressed", "tasks.easy_cropped", "tasks.medium_filtered", "tasks.medium_watermarked", "tasks.medium_metadata_mismatch", "tasks.hard_ambiguous", "tasks.hard_adversarial_decoy", "tasks.hard_ai_generated"]
py-modules = ["inference"]

[tool.setuptools.package-data]
"*" = ["openenv.yaml", "README.md", "requirements.txt"]
